--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.2",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^8.2.7",
+    "formik": "^2.2.9",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.5.0",
+    "valid-url": "^1.0.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
